k8s/auth-deployment.yaml
# auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: microservice-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: gita310/microservices-security:auth-service
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: microservice-security
spec:
  type: NodePort
  selector:
    app: auth-service
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 30082
