k8s/config-deployment.yaml
# config-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service
  namespace: microservice-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-service
  template:
    metadata:
      labels:
        app: config-service
    spec:
      containers:
      - name: config-service
        image: gita310/microservices-security:config-service
        ports:
        - containerPort: 8888
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8888
          initialDelaySeconds: 60
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8888
          initialDelaySeconds: 60
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: config-service
  namespace: microservice-security
spec:
  type: NodePort
  selector:
    app: config-service
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30888
