k8s/discovery-deployment.yaml
# discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
  namespace: microservice-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
      - name: discovery-service
        image: gita310/microservices-security:discovery-service
        ports:
        - containerPort: 8761
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          initialDelaySeconds: 60
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          initialDelaySeconds: 60
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
  namespace: microservice-security
spec:
  type: NodePort
  selector:
    app: discovery-service
  ports:
    - port: 8761
      targetPort: 8761
      nodePort: 30861
