k8s/gateway-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: microservice-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
      - name: gateway-service
        image: gita310/microservices-security:gateway-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: microservice-security
spec:
  type: NodePort
  selector:
    app: gateway-service
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
