k8s/gateway-ingress.yaml
# order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: microservice-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: gita310/microservices-security:user-service
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: microservice-security
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30081
