k8s/order1-deployment.yaml
# order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: microservice-security
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: gita310/microservices-security:order-service
        ports:
        - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: microservice-security
spec:
  type: NodePort
  selector:
    app: order-service
  ports:
    - port: 8086
      targetPort: 8086
      nodePort: 30086
