k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: microservice-security
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: gita310/microservices-security:payment-service
          imagePullPolicy: Always
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: microservice-security
spec:
  selector:
    app: payment-service
  ports:
    - protocol: TCP
      port: 8087
      targetPort: 8087
  type: ClusterIP
